# echo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LOGO.md  README.md  STITCH.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
_backend/: README.md  exemplo.env  main.py  pyproject.toml
_backend/app/: models.py  redis_client.py
_backend/app/repositories/: transcription_repository.py
_backend/app/services/: transcription_service.py
apps/api/: .eslintrc.js  Dockerfile  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.ts
apps/web/: .eslintrc.js  .prettierrc.js  package.json  tsconfig.json
apps/worker/: README.md  exemplo.env  transcribe.py
backend/: .env.exemplo  Dockerfile  package.json  tsconfig.json
backend/app/: config.py  database.py  main.py
backend/app/routers/: transcriptions.py
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
backend/src/core/: either.spec.ts  entity.ts
backend/test/factories/: make-media.ts  make-user.ts
backend/test/repositories/: in-memory-media.repository.ts  in-memory-user.repository.ts
backend/test/services/: fake-crypt.service.ts  (+3 more)
shared-config/eslint/: base.js  react.js
shared-config/prettier/: index.js
web/: .cta.json  index.html  package.json
web/src/: main.tsx  routeTree.gen.ts
worker/: Dockerfile  converter.py  exemplo.env  main.py  pyproject.toml
worker/src/worker/: config.py  database.py  file_handler.py  media_handler.py  queue.py  s3_storage.py  task_queue.py  transcription.py  worker.py
(+183 files in other folders)
